input组件错误提示

--- a/src/css/xing-ui.less
+++ b/src/css/xing-ui.less
@@ -44,3 +44,9 @@
 @input-text-color: @gray-7;
 @input-hover-border: 1px solid @gray-5;
 @input-focus: inset 0 1px 4px 0 @gray-3;
+
+.icon-error, .error-message {
+  fill: currentColor !important;
+  color: @red;
+  vertical-align: middle;
+}
