更新了一下全局样式和图标

--- a/src/css/xing-ui.less
+++ b/src/css/xing-ui.less
@@ -14,7 +14,10 @@
 @active-color: @gray-2;
 @color: #333;
 @text-color: @gray-8;
-@red: #f56556;
+@warning: #f56556;
+@success: #67C23A;
+@warning: #E6A23C;
+@info: #909399;
 @item-height-regular: 32px;
 @border: 1px solid #eee;
 // Font
@@ -47,6 +50,6 @@
 
 .icon-error, .error-message {
   fill: currentColor !important;
-  color: @red;
+  color: @warning;
   vertical-align: middle;
 }
