--- a/src/css/xing-ui.less
+++ b/src/css/xing-ui.less
@@ -35,11 +35,20 @@
 @line-height-md: 20px;
 @line-height-lg: 22px;
 
+//border-radius
+@border-radius: 4px;
+
+//padding
+@padding-base: 4px;
+@padding-sm: 8px;
+@padding-xs: 12px;
+@padding-md: 16px;
+@padding-lg: 20px;
+
 // button
 @button-bg: @main-theme-color;
 @button-active-bg: @main-active-color;
 @button-hover-bg: @main-hover-color;
-@border-radius: 4px;
 @border-color: @gray-3;
 
 // input
@@ -47,6 +56,13 @@
 @input-text-color: @gray-7;
 @input-hover-border: 1px solid @gray-5;
 @input-focus: inset 0 1px 4px 0 @gray-3;
+
+//toast
+@toast-bg: rgba(0, 0, 0, .75);
+@toast-height: 40px;
+@toast-border-radius: @border-radius;
+@toast-color: @white;
+@toast-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.50);
 
 .icon-error, .error-message {
   fill: currentColor !important;
