添加toast动画, 修复传入持续时间时多次弹出toast的问题

--- a/src/css/xing-ui.less
+++ b/src/css/xing-ui.less
@@ -74,3 +74,23 @@
   display: flex;
   align-items: center;
 }
+
+// animate
+@animate-duration-regular: 300ms;
+@keyframes slide-up {
+  0% {opacity: 0; transform: translateY(100%);}
+  100% {opacity: 1;transform: translateY(0%);}
+}
+@keyframes slide-down {
+  0% {opacity: 0; transform: translateY(-100%);}
+  100% {opacity: 1;transform: translateY(0%);}
+}
+@keyframes fade-in {
+  0% {opacity: 0; }
+  100% {opacity: 1;}
+}
+@keyframes fade-out {
+  0% {opacity: 1; }
+  100% {opacity: 0;}
+}
+
