初步创建官网

--- a/src/css/xing-ui.less
+++ b/src/css/xing-ui.less
@@ -1,6 +1,6 @@
 @main-theme-color: #2DD39C;
-@main-hover-color: #4DE9B7;
-@main-active-color: #4DC19C;
+@main-hover-color: #57DCB0;
+@main-active-color: #29B48C;
 @black: #000;
 @white: #fff;
 @gray-1: #f7f8fa;
@@ -81,6 +81,13 @@
 .flex-box {
   display: flex;
   align-items: center;
+}
+
+.demo-box {
+  margin-top: @padding-lg;
+  padding: @padding-lg;
+  border: @main-border;
+  border-radius: @border-radius;
 }
 
 // animate
