补充button组件文档

--- a/src/css/docs-demo.less
+++ b/src/css/docs-demo.less
@@ -16,6 +16,7 @@
       background: @gray-1;
       overflow: hidden;
       transition: @transition;
+      .demo-pre { margin: 0; }
       .code-description {
         padding: @padding-lg;
         margin: @padding-xs;
@@ -67,7 +68,7 @@
 }
 
 .demo-pre {
-  margin: 0;
-  background: transparent;
+  //margin: 0;
+  background: @gray-1;
   code { color: @gray-8; }
 }
