--- a/src/css/xing-ui.less
+++ b/src/css/xing-ui.less
@@ -60,7 +60,7 @@
 @input-border: 1px solid @gray-4;
 @input-text-color: @gray-7;
 @input-hover-border: 1px solid @gray-5;
-@input-focus: inset 0 1px 4px 0 @gray-3;
+@input-focus: inset 0 1px 4px 0 rgba(232, 237, 250, .6);
 
 //toast
 @toast-bg: rgba(0, 0, 0, .75);
