input组件文档内容

--- a/src/css/xing-ui.less
+++ b/src/css/xing-ui.less
@@ -14,7 +14,7 @@
 @active-color: @gray-2;
 @color: #333;
 @text-color: @gray-8;
-@warning: #f56556;
+@error: #f56556;
 @success: #67C23A;
 @warning: #E6A23C;
 @info: #909399;
@@ -74,7 +74,7 @@
 
 .icon-error, .error-message {
   fill: currentColor !important;
-  color: @warning;
+  color: @error;
   vertical-align: middle;
 }
 
