grid组件的官网展示

--- a/src/css/docs-demo.less
+++ b/src/css/docs-demo.less
@@ -1,5 +1,5 @@
 @import url('./xing-ui.less');
-
+@text-color: #2c3e50;
 .demo-box-wrapper {
   @transition: all @animate-duration-regular;
   margin-top: 40px;
@@ -26,7 +26,7 @@
         border-radius: @border-radius;
         font-size: @font-size-md;
         line-height: 22px;
-        color: @gray-6;
+        color: @text-color;
         word-break: break-word;
         background-color: @white;
         p { margin: 0 }
@@ -68,7 +68,6 @@
 }
 
 .demo-pre {
-  //margin: 0;
   background: @gray-1;
   code { color: @gray-8; }
 }
