提取tabs组件样式公共变量

--- a/src/css/xing-ui.less
+++ b/src/css/xing-ui.less
@@ -69,6 +69,12 @@
 @toast-color: @white;
 @toast-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.5);
 
+//tabs
+@tabs-margin-num: @padding-xs;
+@tab-bar-narrow: 2px;
+@tab-bar-wide: 40px;
+@tab-bar-duration: .5s;
+
 //popover
 @popover-shadow: 0 2px 8px rgba(0,0,0,.05);
 
