补充tabs组件官网介绍

--- a/src/tabs/tab-nav.less
+++ b/src/tabs/tab-nav.less
@@ -14,6 +14,8 @@
       background: @gray-2;
     }
     .x-tab-nav__item {
+      display: flex;
+      align-items: center;
       box-sizing: border-box;
       padding: 0 @padding-md;
       font-weight: 600;
