--- a/src/components/tabs/tab-nav.less
+++ b/src/components/tabs/tab-nav.less
@@ -22,7 +22,10 @@
       font-size: @font-size-md;
       &:nth-of-type(2) { padding-left: 0; }
       &:last-of-type { padding-right: 0;}
-      &.nav-active, &:hover { color: @main-theme-color; cursor: pointer; }
+      &.nav-active { color: @main-theme-color; cursor: pointer; }
+      @media (any-hover: hover) {
+        &:hover { color: @main-theme-color; cursor: pointer; }
+      }
       &.nav-disabled { color: @gray-3; cursor: default; }
     }
     &.tab-top::after, &.tab-right::after, &.tab-bottom::after { left: 0}
