css影响最小原则

--- a/src/components/tabs/tab-nav.less
+++ b/src/components/tabs/tab-nav.less
@@ -1,7 +1,7 @@
 @import url('../../css/xing-ui');
-.x-tab-nav__wrapper {
+.xx-tab-nav__wrapper {
   height: 100%;
-  .x-tab-nav__scroll {
+  .xx-tab-nav__scroll {
     position: relative;
     height: @item-height-regular;
     &::after {
@@ -13,7 +13,7 @@
       height: @tab-bar-narrow;
       background: @gray-2;
     }
-    .x-tab-nav__item {
+    .xx-tab-nav__item {
       display: flex;
       align-items: center;
       box-sizing: border-box;
@@ -36,7 +36,7 @@
         width: @tab-bar-narrow;
         height: 100%;
       }
-      .x-tab-nav__item {
+      .xx-tab-nav__item {
         padding: 0 @padding-md;
         width: 100%;
         height: @tab-bar-wide;
@@ -44,7 +44,7 @@
         text-align: left;
       }
     }
-    &.tab-left .x-tab-nav__item { text-align: right; }
+    &.tab-left .xx-tab-nav__item { text-align: right; }
     &.tab-left::after { right: 0 }
   }
 }
