[input]支持clearable属性，支持添加左右icon

--- a/src/css/xing-ui.less
+++ b/src/css/xing-ui.less
@@ -31,6 +31,8 @@
 @active-color: @gray-2;
 @color: #333;
 @text-color: @gray-8;
+@icon-color-light: @gray-5;
+@icon-color-dark: @gray-6;
 @error: #FC7365;
 @error-hover: lighten(@error, 8%);
 @error-active: darken(@error, 8%);
